--- a/client/Public/styles/app.sass
+++ b/client/Public/styles/app.sass
@@ -1,4 +1,5 @@
 $text-dark: #333
+$text-medium: #777
 $accent-dark: #92A8D1
 $accent-light: #F7CAC9
 
@@ -53,4 +54,82 @@ body
 						opacity: 1
 						background: $accent-dark
 
+	.list
+		width: 80%
+		max-width: 792px
+		margin: 0 auto
+		padding: 0
+		margin-top: 48px
+
+		li 
+			list-style: none
+
+			&:last-child
+				.tutorial
+					border-bottom: none
+
+		.tutorial
+			position: relative
+			min-height: 144px
+			display: block
+			padding-bottom: 24px
+			margin-top: 24px
+			border-bottom: 1px dotted #aaa
+			cursor: pointer
+			text-decoration: none
+			color: $text-dark
+
+
+			&::after
+				content: ''
+				background: url(/images/play-button.png)
+				background-size: 72px
+				background-repeat: no-repeat
+				background-position: center
+				width: 240px
+				height: 144px
+				top: 0
+				left: 0
+				z-index: 10
+				position: absolute
+
+			.preview
+				width: 240px
+				height: 144px
+				position: absolute
+				left: 0
+				opacity: 0.5
+				transition: opacity .25s
+				z-index: 5
+
+
+			&:hover
+				.preview
+					opacity: 0.75
+
+			.content
+				padding-left: 264px
+
+				h2
+					font-family: 'Quicksand', sans-serif
+					font-weight: 400
+					font-size: 24px
+					margin: 0
+					padding: 0
+
+				p
+					font-size: 14px
+					margin: 0
+					padding: 0
+					margin-top: 6px
+					line-height: 24px
+					color: $text-medium
+
+
+footer
+	p
+		text-align: center
+		margin-top: 0
+		font-size: 12px
+		color: $text-medium
 
