--- a/client/Resources/Views/Includes/header.mustache
+++ b/client/Resources/Views/Includes/header.mustache
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Vapor University</title>
+
+		<meta name = "viewport" content = "user-scalable=no, width=device-width">
+
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/styles/app.css">
 	</head>
