--- a/client/Public/styles/app.sass
+++ b/client/Public/styles/app.sass
@@ -3,133 +3,147 @@ $text-medium: #777
 $accent-dark: #92A8D1
 $accent-light: #F7CAC9
 
+$tablet: 768px
+$laptop: 1280px
+$desktop: 1920px
+
 body
-	font-family: -apple-system, sans-serif
-	color: $text-dark
+    font-family: -apple-system, sans-serif
+    color: $text-dark
 
 .tutorials
-	.header
-		margin-top: 48px
-		text-align: center
+    .header
+        margin-top: 48px
+        text-align: center
 
-		.logo
-			height: 119px
-		h1 
-			margin: 0
-			padding: 0
-			margin-top: 24px
-			font-weight: 400
-			font-family: 'Quicksand', sans-serif
+        .logo
+            height: 119px
+        h1 
+            margin: 0
+            padding: 0
+            margin-top: 24px
+            font-weight: 400
+            font-family: 'Quicksand', sans-serif
 
-		.toggle
-			margin: 0 auto
-			padding: 0
+        .toggle
+            margin: 0 auto
+            padding: 0
 
-			margin-top: 24px
-			width: 240px
-			height: 48px
+            margin-top: 24px
+            width: 240px
+            height: 48px
 
-			border: 2px solid $accent-dark
-			border-radius: 7px
+            border: 2px solid $accent-dark
+            border-radius: 7px
 
-			li
-				text-align: center
-				list-style: none
-				width: 50%
-				float: left
-				font-size: 36px
-				line-height: 48px
+            li
+                text-align: center
+                list-style: none
+                width: 50%
+                float: left
+                font-size: 36px
+                line-height: 48px
 
-				a
-					display: block
-					width: 100%
-					text-decoration: none
-					opacity: 0.50
-					transition: opacity .25s
+                a
+                    display: block
+                    width: 100%
+                    text-decoration: none
+                    opacity: 0.50
+                    transition: opacity .25s
 
-					&:hover
-						opacity: 1
+                    &:hover
+                        opacity: 1
 
-					&.active
-						opacity: 1
-						background: $accent-dark
+                    &.active
+                        opacity: 1
+                        background: $accent-dark
 
-	.list
-		width: 80%
-		max-width: 792px
-		margin: 0 auto
-		padding: 0
-		margin-top: 48px
+    .list
+        width: 80%
+        max-width: 792px
+        margin: 0 auto
+        padding: 0
+        margin-top: 48px
 
-		li 
-			list-style: none
+        li 
+            list-style: none
 
-			&:last-child
-				.tutorial
-					border-bottom: none
+            &:last-child
+                .tutorial
+                    border-bottom: none
 
-		.tutorial
-			position: relative
-			min-height: 144px
-			display: block
-			padding-bottom: 24px
-			margin-top: 24px
-			border-bottom: 1px dotted #aaa
-			cursor: pointer
-			text-decoration: none
-			color: $text-dark
+        .tutorial
+            position: relative
+            min-height: 144px
+            display: block
+            padding-bottom: 24px
+            margin-top: 24px
+            border-bottom: 1px dotted #aaa
+            cursor: pointer
+            text-decoration: none
+            color: $text-dark
+
+            &::after
+                content: ''
+                background: url(/images/play-button.png)
+                background-size: 72px
+                background-repeat: no-repeat
+                background-position: center
+                top: 0
+                left: 0
+                z-index: 10
+                position: absolute
+                width: 100%
+                height: 144px
+
+                @media screen and (min-width: $tablet)
+                    width: 240px
+                    height: 144px
+
+            .preview
+                opacity: 0.5
+                transition: opacity .25s
+                z-index: 5
+                width: 100%
+                width: 240px
+                height: 144px
+                margin: 0 auto
+                display: block
+                margin-bottom: 12px
+
+                @media screen and (min-width: $tablet)
+                    position: absolute
+                    left: 0
 
 
-			&::after
-				content: ''
-				background: url(/images/play-button.png)
-				background-size: 72px
-				background-repeat: no-repeat
-				background-position: center
-				width: 240px
-				height: 144px
-				top: 0
-				left: 0
-				z-index: 10
-				position: absolute
+            &:hover
+                .preview
+                    opacity: 0.75
 
-			.preview
-				width: 240px
-				height: 144px
-				position: absolute
-				left: 0
-				opacity: 0.5
-				transition: opacity .25s
-				z-index: 5
+            .content
+                @media screen and (min-width: $tablet)
+                    padding-left: 264px
 
+                h2
+                    font-family: 'Quicksand', sans-serif
+                    font-weight: 400
+                    font-size: 24px
+                    margin: 0
+                    padding: 0
 
-			&:hover
-				.preview
-					opacity: 0.75
-
-			.content
-				padding-left: 264px
-
-				h2
-					font-family: 'Quicksand', sans-serif
-					font-weight: 400
-					font-size: 24px
-					margin: 0
-					padding: 0
-
-				p
-					font-size: 14px
-					margin: 0
-					padding: 0
-					margin-top: 6px
-					line-height: 24px
-					color: $text-medium
+                p
+                    font-size: 14px
+                    margin: 0
+                    padding: 0
+                    margin-top: 6px
+                    line-height: 24px
+                    color: $text-medium
 
 
 footer
-	p
-		text-align: center
-		margin-top: 0
-		font-size: 12px
-		color: $text-medium
+    p
+        text-align: center
+        margin-top: 0
+        font-size: 12px
+        color: $text-medium
 
