--- a/client/Public/styles/app.sass
+++ b/client/Public/styles/app.sass
@@ -83,7 +83,7 @@ body
             text-decoration: none
             color: $text-dark
 
-            &::after
+            &.playable::after
                 content: ''
                 background: url(/images/play-button.png)
                 background-size: 72px
