--- a/client/Resources/Views/Tutorials/index.mustache
+++ b/client/Resources/Views/Tutorials/index.mustache
@@ -17,7 +17,7 @@
 	<ul class="list">
 		{{#tutorials}}
 			<li>
-				<a target="_blank" class="tutorial" href="{{url}}">
+				<a target="_blank" class="tutorial {{#playable}}playable{{/playable}}" href="{{url}}">
 					<img src="/images/previews/{{image}}" alt="" class="preview">
 					<div class="content">
 						<h2>{{name}}</h2>
