--- a/client/Resources/Views/Tutorials/index.mustache
+++ b/client/Resources/Views/Tutorials/index.mustache
@@ -22,6 +22,7 @@
 					<div class="content">
 						<h2>{{name}}</h2>
 						<p>{{description}}</p>
+						<p>{{duration}}m • {{difficulty}} • {{author}}</p>
 					</div>
 				</a>
 			</li>
