--- a/client/Resources/Views/Includes/footer.mustache
+++ b/client/Resources/Views/Includes/footer.mustache
@@ -1,5 +1,5 @@
 	<footer>
-		<p>&copy; 2016 Qutheory</p>
+		<p>&copy; 2016 Qutheory. Proudly served by Vapor v0.14.0.</p>
 	</footer>
 	</body>
 </html>
