--- a/client/Resources/Views/Includes/header.mustache
+++ b/client/Resources/Views/Includes/header.mustache
@@ -4,6 +4,9 @@
 		<title>Vapor University</title>
 
 		<meta name = "viewport" content = "user-scalable=no, width=device-width">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/styles/app.css">
