--- a/client/Resources/Views/Includes/footer.mustache
+++ b/client/Resources/Views/Includes/footer.mustache
@@ -1,5 +1,15 @@
 	<footer>
 		<p>&copy; 2016 Qutheory. Proudly served by Vapor v0.14.0.</p>
 	</footer>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-76177358-3', 'auto');
+		ga('send', 'pageview');
+	</script>
+
 	</body>
 </html>
