website + error updates

--- a/client/Public/styles/app.sass
+++ b/client/Public/styles/app.sass
@@ -12,6 +12,15 @@ body
     color: $text-dark
 
 .tutorials
+    p.error
+        background: rgba(255,246,185, 0.2)
+        border: 2px solid #FFF6B9   
+        padding: 12px
+        border-radius: 5px
+        width: 420px
+        margin: 22px auto
+        text-align: center
+
     .header
         margin-top: 48px
         text-align: center
