--- a/client/Public/styles/app.sass
+++ b/client/Public/styles/app.sass
@@ -10,6 +10,27 @@ $desktop: 1920px
 body
     font-family: -apple-system, sans-serif
     color: $text-dark
+    margin: 0
+    padding: 0
+
+div.banner
+
+    background: #1BC98E
+    color: white
+    padding: 8px 20px
+
+    text-align: center
+
+    a
+        margin-left: 5px
+        display: inline-block
+        padding: 5px 10px
+        background: #159c6e
+        border-radius: 5px
+        color: white
+        font-size: 16px
+        color: white
+        text-decoration: none
 
 .tutorials
     p.error
@@ -147,6 +168,19 @@ body
                     margin-top: 6px
                     line-height: 24px
                     color: $text-medium
+
+            .version
+                position: absolute
+                top: 5px
+                right: 0
+
+                img
+                    height: 24px
+                    float: left
+
+                span
+                    line-height: 24px
+                    color: #777
 
 
 footer
